# verifiers-fork

./: GRPO_TRAINING_REPORT.md  pyproject.toml
environments/inoi/: .gitignore  CHANGELOG.md  README.md  SVG_CONVERSION_STATUS.md  __init__.py  example_usage.py  gemini_eval_results_20251008_011721.json  inoi.py  prepare_and_upload_hf.py  pyproject.toml  simple_browser_convert.py  test_inoi.py
environments/inoi/docs/: CLEANUP_SUMMARY.md  DATABASE_EXPLORATION_SUMMARY.md  DATASET_CARD.md  DIRECTORY_STRUCTURE.md  FINAL_DATASET_STATUS.md  INOI_INPUT_OUTPUT_EXAMPLES.md  INOI_REFACTORING_COMPLETE.md  MONGODB_CONVERSION.md  SOLUTION_SHORT_FIX_REPORT.md
environments/inoi/outputs/evals/inoi--Qwen--Qwen3-VL-2B-Instruct/3532de86/: metadata.json
environments/inoi/outputs/evals/inoi--Qwen--Qwen3-VL-2B-Thinking/d9dd1e89/: metadata.json
environments/inoi/outputs/evals/inoi--Qwen--Qwen3-VL-4B-Thinking/4bebc6e5/: metadata.json
environments/inoi/outputs/evals/inoi--Qwen--Qwen3-VL-8B-Instruct/8dfd4681/: metadata.json
environments/inoi/outputs/evals/inoi--Qwen--Qwen3-VL-8B-Thinking/9f7a3dc4/: metadata.json
environments/inoi/outputs/evals/inoi--anthropic--claude-haiku-4.5/801ee435/: metadata.json
environments/inoi/outputs/evals/inoi--anthropic--claude-haiku-4.5/a0c1d851/: metadata.json
environments/inoi/outputs/evals/inoi--gemini-2.5-flash/420b733d/: metadata.json
environments/inoi/outputs/evals/inoi--gemini-2.5-flash/6985e6e7/: metadata.json  results.jsonl
environments/inoi/scripts/: convert_mongodb_to_hf.py  simple_browser_convert.py  upload_to_hf.py
modal/: README.md  (+3 more)
(+36 files in other folders)
