[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inoi"
version = "0.1.0"
description = "INOI (Iranian National Olympiad in Informatics) environment for verifiers"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "verifiers",
    "pymongo>=4.0",
    "pillow>=10.0",
    "requests>=2.31",
    "math-verify>=0.1.0",
]

[project.entry-points."verifiers.environments"]
inoi = "inoi:load_environment"

[tool.setuptools]
py-modules = ["inoi"]
