[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inoi"
version = "0.1.0"
description = "Iranian National Olympiad in Informatics (INOI) environment for verifiers - multimodal math reasoning"
tags = ["olympiad", "math", "multimodal", "reasoning", "persian", "english"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.5",
    "pymongo>=4.0",
    "pillow>=10.0",
    "requests>=2.31",
    "math-verify>=0.1.0",
    "datasets>=2.0",
    "tqdm>=4.65",
]

[project.entry-points."verifiers.environments"]
inoi = "inoi:load_environment"

[tool.hatch.build]
include = ["inoi.py"]
